--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "raw-loader": "^0.5.1"
   }
 }
